fix fab on iOS

--- a/app/app.css
+++ b/app/app.css
@@ -22,6 +22,9 @@ TextField {
   margin-top: 20;
 }
 .fab-button {
+    height: 70;
     margin: 15;
+    horizontal-align: right; 
+    vertical-align: bottom; 
     background-color: #2962ff; 
 }
